--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
       <section
         class="mt-12 lg:flex lg:flex-row-reverse lg:justify-between lg:items-center"
       >
-        <div class="w-[600px]">
+        <div class="lg:w-[600px]">
           <img src="images/shopping.png" alt="" />
         </div>
 
-        <div class="mt-12 w-[500px]">
+        <div class="mt-12 lg:w-[500px]">
           <div
             class="flex flex-col items-center px-8 py-6 bg-white drop-shadow-lg rounded-3xl gap-3 mt-6 lg:flex-row lg:gap-8"
           >
